--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="block relative w-full px-10 md:px-28 lg:px-28 xl:px-28 2xl:px-28">
         <!-- Banner -->
         <div id="banner" class="text-white h-screen flex items-center relative banner">
-            <div class="overflow-hidden">
+            <div>
                 <h2 class="title text-sm sm:text-lg md:text-base lg:text-lg xl:text-xl">
                     <div class="banner-coment inline-block"></div>
                     <div class="cursor-coment inline" id="cursor-coment">|</div>
@@ -37,15 +37,14 @@
                 <h2 class="text-5xl md:text-6xl lg:text-6xl xl:text-6xl 2xl:text-6xl font-bold leading-tight mb-20">
                     <div class="banner-text-1 inline"></div>
                     <span class="name inline"></span>
+                    <div class="cursor inline" id="cursor-1">|</div>
+                    <br>
                     <div class="banner-text-2 inline"></div>
-                    <div class="cursor inline" id="cursor">|</div>
+                    <div class="cursor inline" id="cursor-2">|</div>
                 </h2>
                 <a href="#contact" id="banner-contact-btn"
-                    class="btn border relative py-5 px-5 inline-block hover:border-transparent hover:bg-white hover:text-black text-md sm:text-lg md:text-base lg:text-lg xl:text-xl">
-                    Men bilan bog'lanish
-                    <!-- <div id="banner-contact-btn-hidden"
-                        class="absolute left-0 top-0 w-full h-full scale-105 bg-black btn py-5 px-5 inline-block text-md sm:text-lg md:text-base lg:text-lg xl:text-xl">
-                    </div> -->
+                    class="btn border relative z-50 py-5 px-5 inline-block hover:border-transparent hover:bg-white hover:text-black text-md sm:text-lg md:text-base lg:text-lg xl:text-xl">
+                    <span class="z-50">Men bilan bog'lanish</span>
                 </a>
                 </span>
             </div>
@@ -78,7 +77,7 @@
 
         <!-- Skillis -->
         <div id="skillis" class="text-white mt-32">
-            <h2 class="title text-sm sm:text-lg md:text-base lg:text-lg xl:text-xl">Malakalar</h2>
+            <h2 class="title text-sm sm:text-lg md:text-base lg:text-lg xl:text-xl"># Malakalar</h2>
             <div class="flex md:flex-row lg:flex-row xl:flex-row 2xl:flex-row flex-col mb-10">
                 <div class="flex-1 mb-20 md:pr-5 lg:pr-10 xl:pr-20">
                     <h2 class="font-size mb-10 text-4xl leading-tight md:text-5xl lg:text-5xl xl:text-5xl">
@@ -118,7 +117,7 @@
 
         <!-- Projects -->
         <div id="#projects" class="text-white mt-32">
-            <h2 class="title text-sm sm:text-lg md:text-base lg:text-lg xl:text-xl">Loyihalar</h2>
+            <h2 class="title text-sm sm:text-lg md:text-base lg:text-lg xl:text-xl"># Loyihalar</h2>
             <div class="flex md:flex-row lg:flex-row xl:flex-row 2xl:flex-row flex-col mb-10">
                 <div class="flex-1 mb-20">
                     <div class="splide" role="group" aria-label="Splide Basic HTML Example">
@@ -140,7 +139,7 @@
 
         <!-- Contact -->
         <div id="#contact-component" class="text-white mt-32">
-            <h2 class="title text-sm sm:text-lg md:text-base lg:text-lg xl:text-xl">Aloqa</h2>
+            <h2 class="title text-sm sm:text-lg md:text-base lg:text-lg xl:text-xl"># Aloqa</h2>
             <div class="flex md:flex-row lg:flex-row xl:flex-row 2xl:flex-row flex-col mb-10">
                 <div class="flex-1 mb-20 md:pr-5 lg:pr-10 xl:pr-20">
                     <h2 class="font-size mb-10 text-2xl leading-tight md:text-2xl lg:text-3xl xl:text-3xl">
